--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,7 +2,7 @@
 
 $heading: 'Raleway', Verdana, sans-serif;
 $main: 'Lato', Arial, sans-serif;
-
+$icons: 'Font Awesome 5 Brands';
 
 // Palette color codes */
 // Palette URL: http://paletton.com/#uid=23s0u0k00Pg00++9ligtRcYIlr- */
